# rules_terraform

./: .gitignore  BUILD  BUILD.bazel  LICENSE  README.md  WORKSPACE  bazel-testlogs
.github/workflows/: buildifier.yml
examples/: WORKSPACE
examples/plan/: BUILD.bazel
rules_terraform/: BUILD
terraform/: BUILD  BUILD.terraform.bazel  apply.bzl  defs.bzl  deps.bzl  init.bzl  path.bzl  plan.bzl  providers.bzl  terraform.bzl  terraform_plan.sh.tpl  toolchain.bzl
terraform/internal/: BUILD.bazel  BUILD.terraform.bazel  init.bzl  plan.bzl  platform.bzl  providers.bzl  terraform_plan.sh.tpl  terraform_toolchain.bzl  toolchain.bzl
test/: BUILD
