load("@rules_terraform//terraform/internal:toolchain.bzl", "declare_terraform_toolchains")

package(default_visibility = ["//visibility:public"])

declare_terraform_toolchains(
    version = "{version}",
)

filegroup(
    name = "{name}",
    srcs = ["terraform/terraform{exe}"],
    visibility = ["//visibility:public"],
)

exports_files(["terraform/terraform{exe}"])
